# ml-feature-platform

./: .airflowignore  .drone.yaml  .gitignore  AGENTS.md  CLAUDE.md  ci_config.yaml  config.yaml  test_script.py
.github/: CODEOWNERS
ci_test/: test_account_category_event_partition.py  test_dynamic_pricing_default_promotion.py  test_dynamic_pricing_silver_query.py  test_dynamic_pricing_upload_dependency.py  test_geo_dag_architecture.py  test_product_search_queries_partition.py  test_ranking_upload_sku_group_to_promo.py  test_run_pyspark_migrations.py  test_script.py  test_search_query_sku_group_dssm_scores.py  test_search_query_sku_group_es_features.py  test_sku_group_install_partition.py  test_spark_resources.py  test_sync_dbt_sources.py  test_sync_iceberg_maintenance.py  test_validate_ranking_upload_configs.py
config/spark/: layer_spark_application.yaml  resources.yaml
dags_v3/ci_test/: test_script.py
docs/: README.md  feature_platform_guide.md
layers/: README.md
layers/gold/: README.md
layers/silver/sku_group_id/sku_group_id_prices/v1/: Dockerfile  README.md  config.yaml  dag.py  pyproject.toml
layers/silver/sku_group_id/sku_group_id_prices/v1/job/: getting_sku_group_id_prices.py
layers/silver/sku_group_id/sku_group_id_prices/v1/migrations/: create_table.sql
layers/silver/sku_group_install/v1/: .drone.yaml  Dockerfile  config.yaml  dag.py  pyproject.toml
layers/silver/sku_group_install/v1/config/: factory.py  fetch_silver_sku_group_statistics.yaml
layers/silver/sku_group_install/v1/entrypoints/: get_search_sku_group_silver_stats.py
layers/silver/sku_group_install/v1/job/: arguments.py  entities.py  getting_sku_group_query_statistics.py
layers/silver/sku_group_install/v1/migrations/: create_table.sql
scripts/: run_pyspark_migrations.py  sync_dbt_sources.py  sync_iceberg_maintenance.py  validate_ranking_upload_configs.py
(+566 files in other folders)
