[tool.poetry]
name = "pyspark-sku-group-install-silver-stats"
version = "0.1.0"
description = "SKU group install silver stats collection using PySpark"
authors = ["Search Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.9.13"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
notebook = "^7.0.2"
mypy = "^1.5.0"
wemake-python-styleguide = "^0.18.0"
pytest-mock = "^3.11.1"
pytest-cov = "^4.1.0"

[tool.poetry.group.spark.dependencies]
pyspark = "3.4.1"
numpy = "^1.25.2"
pandas = "1.5.3"

[[tool.poetry.source]]
name = "um"
url = "https://nexus.infra.internal.daymarket.uz/repository/um-pypi/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
