[tool.poetry]
name = "pyspark-sku-group-id-prices"
version = "0.1.0"
description = "SKU group daily price silver features using PySpark"
authors = ["Search Team"]
readme = "README.md"
packages = [
    { include = "job" },
    { include = "migrations" },
]
include = [
    { path = "migrations/create_table.sql", format = ["sdist", "wheel"] },
    { path = "migrations/20260602_add_price_min_max_columns.sql", format = ["sdist", "wheel"] },
]

[tool.poetry.dependencies]
python = "3.9.13"
pyspark = "3.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
notebook = "^7.0.2"
mypy = "^1.5.0"
wemake-python-styleguide = "^0.18.0"
pytest-mock = "^3.11.1"
pytest-cov = "^4.1.0"

[[tool.poetry.source]]
name = "um"
url = "https://nexus.infra.internal.daymarket.uz/repository/um-pypi/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
